# libsymbols

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
docs/: stabs.txt
include/: aout.h  mapfile.h  nlist.h  stabs.h  symbols.h
src/: aout.c  mapfile.c  nlist.c  srcmap_debug.c  stabs.c  symbols.c
test/: Makefile  dump_header  dump_header.c  test_mapfile  test_mapfile.c  test_nlist.c  test_performance  test_performance.c  test_reader  test_reader.c  test_stabs  test_stabs.c  test_symbols_aout  test_symbols_aout.c
test/data/: example.c  example.s  generate_test_files.sh  intr.s  nd100-hello.s
